--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Clean - One Page Personal Portfolio</title>
+	<title>Александра - Портфолио</title>
 
 	<!-- CSS -->
 	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -33,9 +33,9 @@
 	<section id="home" class="pfblock-image screen-height">
         <div class="home-overlay"></div>
 		<div class="intro">
-			<div class="start">Hello, my name is John Doe and I am</div>
-			<h1>Full Stack Web Developer</h1>
-			<div class="start">creating modern and responsive Web Application</div>
+			<div class="start">Hello, my name is Alexandra and I am</div>
+			<h1>Marketing Specialist</h1>
+			<div class="start">creating modern and high-quality advertisement</div>
 		</div>
 
         <a href="#services">
@@ -65,7 +65,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="index.html">John Doe</a>
+					<a class="navbar-brand" href="index.html">Alexandra K</a>
 				</div>
 
 				<div class="collapse navbar-collapse" id="custom-collapse">
@@ -99,7 +99,7 @@
 						<h2 class="pfblock-title">This is what I do</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+							Everyone has their own stars. To those who wander, they show the way. For others, it's just lights.
 						</div>
 					</div>
 
