--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 							<span class="icon-magic-wand"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Web Design</h3>
+							<h3 class="iconbox-title">Analysis Target Audience</h3>
 							<div class="iconbox-desc">
-								Good things come to those who wait, but only the things left by those who hustle
+								Studying your target audience, dividing it into segments. Each segment has its own interests, needs and habitats.
 							</div>
 						</div>
 					</div>
@@ -132,9 +132,9 @@
 							<span class="icon-puzzle"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Web Programming</h3>
+							<h3 class="iconbox-title">Work strategy and recommendations</h3>
 							<div class="iconbox-desc">
-								Good things come to those who wait, but only the things left by those who hustle
+								A detailed work plan specifically for you. Thus, the probability of success increases and there will be no unpleasant surprises.
 							</div>
 						</div>
 					</div>
