--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 							<span class="icon-badge"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Branding</h3>
+							<h3 class="iconbox-title">Creating advertisements</h3>
 							<div class="iconbox-desc">
-								Good things come to those who wait, but only the things left by those who hustle
+								5, 10 or 20 advertisements of different formats. Adhering to all the wishes of the client.
 							</div>
 						</div>
 					</div>
@@ -164,9 +164,9 @@
 							<span class="icon-question"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Consultation</h3>
+							<h3 class="iconbox-title">Reporting, summarizing and useful tips</h3>
 							<div class="iconbox-desc">
-								Good things come to those who wait, but only the things left by those who hustle
+								Mandatory reporting - once a week. It contains all the figures for the project (spent, received, how much it costs), conclusions about what worked and what didn't, and suggestions for what to do.
 							</div>
 						</div>
 					</div>
