--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Reporting, summarizing and useful tips</h3>
 							<div class="iconbox-desc">
-								Mandatory reporting - once a week. It contains all the figures for the project (spent, received, how much it costs), conclusions about what worked and what didn't, and suggestions for what to do.
+								Reporting – once a week. It contains all the figures for the project (spent, how much it costs, etc.), conclusions about what worked suggestions for a solution.
 							</div>
 						</div>
 					</div>
