--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 							<span class="icon-question"></span>
 						</div>
 						<div class="iconbox-text">
-							<h3 class="iconbox-title">Reporting, summarizing and useful tips</h3>
+							<h3 class="iconbox-title">Reporting and useful tips</h3>
 							<div class="iconbox-desc">
-								Reporting – once a week. It contains all the figures for the project (spent, how much it costs, etc.), conclusions about what worked suggestions for a solution.
+								Reporting – once a week. It contains all the figures for the project (spent, how much it costs, etc.), conclusions about what worked, suggestions for a solution.
 							</div>
 						</div>
 					</div>
