--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-magic-wand"></span>
+							<span class="icon-fa fa-search"></span>
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Analysis Target Audience</h3>
