--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-search"></span>
+                            <i class="icon-search"></i> icon-search
+
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Analysis Target Audience</h3>
