--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-                            <i class="icon-search"></i> icon-search
+                            <i class="icon-search"></i> 🔍
 
 						</div>
 						<div class="iconbox-text">
