--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
                             <i class="icon-search"></i> 🔍
-
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Analysis Target Audience</h3>
@@ -130,7 +129,7 @@
 
 					<div class="iconbox wow slideInLeft">
 						<div class="iconbox-icon">
-							<span class="icon-puzzle"></span>
+							<i class="icon-search"></i> 📝
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Work strategy and recommendations</h3>
@@ -146,7 +145,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-badge"></span>
+							<i class="icon-search"></i> 🎨
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Creating advertisements</h3>
@@ -162,7 +161,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<span class="icon-question"></span>
+							<i class="icon-search"></i> 🔐
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Reporting and useful tips</h3>
