--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
 					<div class="iconbox wow slideInRight">
 						<div class="iconbox-icon">
-							<i class="icon-search"></i> ✅
+							<i class="icon-search"></i> 📊
 						</div>
 						<div class="iconbox-text">
 							<h3 class="iconbox-title">Reporting and useful tips</h3>
