--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<h2 class="pfblock-title">My works</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+							People will forget how quickly the job was done, but they won't forget how well it was done.
 						</div>
 					</div>
 
@@ -208,8 +208,8 @@
                         <figure class="effect-bubba">
                             <img src="assets/images/item-1.jpg" alt="img01"/>
                             <figcaption>
-                                <h2>Crazy <span>Shark</span></h2>
-                                <p>Lily likes to play with crayons and pencils</p>
+                                <h2>Case <span>Title</span></h2>
+                                <p>Something will be here soon :)</p>
                             </figcaption>			
                         </figure>
                     </div>
@@ -222,8 +222,8 @@
                         <figure class="effect-bubba">
                             <img src="assets/images/item-2.jpg" alt="img01"/>
                             <figcaption>
-                                <h2>Funny <span>Tortoise</span></h2>
-                                <p>Lily likes to play with crayons and pencils</p>
+                                <h2>Case <span>Title</span></h2>
+                                <p>Something will be here soon :)</p>
                             </figcaption>			
                         </figure>
                     </div>
@@ -236,8 +236,8 @@
                         <figure class="effect-bubba">
                             <img src="assets/images/item-3.jpg" alt="img01"/>
                             <figcaption>
-                                <h2>The <span>Hat</span></h2>
-                                <p>Lily likes to play with crayons and pencils</p>
+                                <h2>Case <span>Title</span></h2>
+                                <p>Something will be here soon :)</p>
                             </figcaption>			
                         </figure>
                     </div>
@@ -250,8 +250,8 @@
                         <figure class="effect-bubba">
                             <img src="assets/images/item-4.jpg" alt="img01"/>
                             <figcaption>
-                                <h2>Bang <span>Bang</span></h2>
-                                <p>Lily likes to play with crayons and pencils</p>
+                                <h2>Case <span>Title</span></h2>
+                                <p>Something will be here soon :)</p>
                             </figcaption>			
                         </figure>
                     </div>
@@ -264,8 +264,8 @@
                         <figure class="effect-bubba">
                             <img src="assets/images/item-5.jpg" alt="img01"/>
                             <figcaption>
-                                <h2>Crypton <span>Dude</span></h2>
-                                <p>Lily likes to play with crayons and pencils</p>
+                                <h2>Case <span>Title</span></h2>
+                                <p>Something will be here soon :)</p>
                             </figcaption>			
                         </figure>
                     </div>
@@ -278,8 +278,8 @@
                         <figure class="effect-bubba">
                             <img src="assets/images/item-6.jpg" alt="img01"/>
                             <figcaption>
-                                <h2>Don't <span>Poke</span></h2>
-                                <p>Lily likes to play with crayons and pencils</p>
+                                <h2>Case <span>Title</span></h2>
+                                <p>Something will be here soon :)</p>
                             </figcaption>			
                         </figure>
                     </div>
