--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             
                     <div class="grid wow zoomIn">
                         <figure class="effect-bubba">
-                            <img src="assets/images/item-6.jpg" alt="img01"/>
+                            <img src="/home/alex/Изображения/targetirovannaya-reklama.ru.jpg" alt="img01"/>
                             <figcaption>
                                 <h2>Case <span>Title</span></h2>
                                 <p>Something will be here soon :)</p>
