--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 <h2 class="pfblock-title">My Skills</h2>
                                 <div class="pfblock-line"></div>
                                 <div class="pfblock-subtitle">
-                                    No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+                                    A person can be a genius or have all the necessary skills, but if he does not believe in himself, he will not give his best.
                                 </div>
                             </div>
 
@@ -321,9 +321,9 @@
 					
 					<div class="col-sm-6 col-md-3 text-center">
 						<span data-percent="80" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">80</span>
+                            <span class="percent">95</span>
                         </span>
-						<h3 class="text-center">Programming</h3>
+						<h3 class="text-center">Analytical thinking</h3>
 					</div>
 					<div class="col-sm-6 col-md-3 text-center">
 						<span data-percent="90" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
@@ -333,15 +333,15 @@
 					</div>
 					<div class="col-sm-6 col-md-3 text-center">
 						<span data-percent="85" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">85</span>
+                            <span class="percent">80</span>
                         </span>
 						<h3 class="text-center">Marketing</h3>
 					</div>
 					<div class="col-sm-6 col-md-3 text-center">
 						<span data-percent="95" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">95</span>
+                            <span class="percent">85</span>
                         </span>
-						<h3 class="text-center">UI / UX</h3>
+						<h3 class="text-center">Creativity</h3>
 					</div>
 					
 				</div><!--End row -->
