--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
 						<h3 class="text-center">Analytical thinking</h3>
 					</div>
 					<div class="col-sm-6 col-md-3 text-center">
-						<span data-percent="90" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">90</span>
+						<span data-percent="89" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
+                            <span class="percent">89</span>
                         </span>
 						<h3 class="text-center">Design</h3>
 					</div>
@@ -338,8 +338,8 @@
 						<h3 class="text-center">Marketing</h3>
 					</div>
 					<div class="col-sm-6 col-md-3 text-center">
-						<span data-percent="85" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
-                            <span class="percent">85</span>
+						<span data-percent="82" class="chart easyPieChart" style="width: 140px; height: 140px; line-height: 140px;">
+                            <span class="percent">82</span>
                         </span>
 						<h3 class="text-center">Creativity</h3>
 					</div>
@@ -367,7 +367,7 @@
 				</div>
 
 				<div class="col-md-12 col-lg-12 calltoaction-btn wow slideInRight" data-wow-delay=".3s">
-					<a href="#contact" class="btn btn-lg">Hire Me</a>
+					<a href="#contact" class="btn btn-lg">Write Me</a>
 				</div>
 
 			</div><!-- .row -->
@@ -390,7 +390,7 @@
 						<h2 class="pfblock-title">What my clients say</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+							Quality is doing something right, even when no one is watching
 						</div>
 					</div>
 
@@ -404,15 +404,15 @@
                 <div class="cbp-qtcontent">
                     <img src="assets/images/client-1.jpg" alt="client-1" />
                     <blockquote>
-                      <p>Work with John was a pleasure. He understood exactly what I wanted and created an awesome site for my company.</p>
-                      <footer>Pino Caruso</footer>
+                      <p>Work with Alexandra was a pleasure. She understood exactly what I wanted and created an awesome advertisement for my company.</p>
+                      <footer>Schwarzthal Tech</footer>
                     </blockquote>
                 </div>
                 <div class="cbp-qtcontent">
                     <img src="assets/images/client-2.jpg" alt="client-2" />
                     <blockquote>
                       <p>I'm really happy with the results. Get 100% satisfaction is difficult but Alex got it without problems.</p>
-                      <footer>Jane Doe</footer>
+                      <footer>Margo</footer>
                     </blockquote>
                 </div>
 
