--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 						<h2 class="pfblock-title">Drop me a line</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
-							No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people’s eyes, to reveal the marvels around.
+							I'm ready to get to work and make an analysis for you.
 						</div>
 					</div>
 
@@ -497,10 +497,10 @@
 					</ul>
 
 					<p class="heart">
-                        Made with <span class="fa fa-heart fa-2x animated pulse"></span> in Nottingham
+                        Made with <span class="fa fa-heart fa-2x animated pulse"></span> Love
                     </p>
                     <p class="copyright">
-                        © 2015 John Doe | Images: <a href="https://unsplash.com/">Unsplash</a> & <a href="http://zoomwalls.com/">Zoomwalls</a>
+                        © 2021 Alexandra K | <a href="https://unsplash.com/"></a> & <a href="http://zoomwalls.com/"></a>
 					</p>
 
 				</div>
