--- a/index.html
+++ b/index.html
@@ -497,10 +497,10 @@
 					</ul>
 
 					<p class="heart">
-                        Made with <span class="fa fa-heart fa-2x animated pulse"></span> Love
+                        Made with Happy<span class="fa fa-heart fa-2x animated pulse"></span>Love
                     </p>
                     <p class="copyright">
-                        © 2021 Alexandra K | <a href="https://unsplash.com/"></a> & <a href="http://zoomwalls.com/"></a>
+                        © 2021 Alexandra K | <a href="https://unsplash.com/"></a> & GIT<a href="http://zoomwalls.com/"></a>
 					</p>
 
 				</div>
